--- a/arch/arm64/boot/dts/rockchip/Makefile
+++ b/arch/arm64/boot/dts/rockchip/Makefile
@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: GPL-2.0
 dtb-$(CONFIG_ARCH_ROCKCHIP) += \
-	rk3566-orangepi-3b.dtb \
+	rk3566-panther-x2.dtb \
 
 subdir-y       := $(dts-dirs) overlay
